--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^6.1.6",
     "canvas-confetti": "^1.9.3",
     "dotenv": "^16.4.5",
+    "firebase": "^11.0.1",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-router-dom": "^6.28.0",
