--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "nutrias-chambeadoras"
-  }
+    "default": "prod-nutrias-chambeadoras",
+    "prod": "prod-nutrias-chambeadoras"
+  },
+  "targets": {},
+  "etags": {}
 }
