--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "prod-nutrias-chambeadoras",
+    "default": "nutrias-chambeadoras",
     "prod": "prod-nutrias-chambeadoras"
   },
   "targets": {},
