--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-router-dom": "^6.28.0",
+    "react-snowfall": "^2.1.1",
     "vite-plugin-pwa": "^0.20.5"
   },
   "devDependencies": {
